<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:layout_marginLeft="23dp"
    android:layout_marginRight="23dp"
    android:layout_marginTop="54dp">
    <EditText
        android:id="@+id/et_existing_email"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Primary"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/et_existing_password"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Primary"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="67dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/bt_login"
        android:textSize="21dp"
        android:textColor="@color/White"
        android:backgroundTint="@color/Accent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="________________________"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="________________________"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="146dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="21dp"
        android:textColor="@color/White"
        android:backgroundTint="@color/Grey"
        android:text="@string/bt_register"/>
</LinearLayout>